fix text and image overflow on recipelist and popup and substitution

--- a/src/pages/RecipeList.css
+++ b/src/pages/RecipeList.css
@@ -4,9 +4,8 @@
   justify-content: center;
   align-items: center;
 }
-.popup-match {
-  padding-top: 10px;
-}
+/* .popup-match {
+} */
 .popup-button {
   /* padding-top: 15px; */
   margin: 10px;
@@ -17,4 +16,43 @@
 .card-title {
   font-size: 200%; 
   color: #6cb1c9;
+}
+/* .mycard {
+  display: "flex";
+  align-items: "center";
+  width: "100%";
+  margin: "15px";
+  margin-bottom: "10px";
+  border-radius: "25px";
+  border-width: "4px";
+  padding-left: "0px";
+  margin-left: "0px";
+} */
+.mycard-outer {
+  padding: 10px;
+}
+/* .mycard {
+  padding: 10px;
+} */
+.card-img {
+  max-width:100%;
+  max-height:100%;
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
+.recipe-image-con {
+  padding: 15px;
+  text-align: center;
+  align-items: center;
+  max-width: 500px; /* prevent it from getting too big */
+}
+.recipe-image {
+  max-width:100%;
+  max-height:100%;
+  margin-bottom: 10px;
+  border-radius: 7px;
+}
+.rp-button {
+  margin: 5px;
 }
