--- a/src/pages/SubstitutionPopup.css
+++ b/src/pages/SubstitutionPopup.css
@@ -2,6 +2,8 @@
 
 
 .popup {
+  
+  word-wrap: break-word;
   /* position: fixed; */
   top: 0;
   left: 0;
